testdata/invalid/invalid_union_double_deprecated.bop
union U {
    [deprecated("1")]
    [deprecated("2")]
}